feat: add endpoint remove pix key
